--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/assets/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
 </head>
 
 <body>
     <div class="nav">
-
+       
         <div class=container>
             <i class="ri-spotify-fill">
                 <div class="list">
@@ -27,5 +27,25 @@
             </i>
         </div>
     </div>
+    <div class="log-bar"></div>
+    <div class="banner"></div>
+    <div class="catagory">
+        <div class="container">
+            <div class="sub-title">
+                Explore Carousell
+            </div>
+            <div>
+                <img src="assets/img/category/1.png"/>
+                <img src="assets/img/category/2.png"/>
+                <img src="assets/img/category/3.png"/>
+                <img src="assets/img/category/4.png"/> 
+                <img src="assets/img/category/5.png"/>
+                <img src="assets/img/category/6.png"/>
+                <img src="assets/img/category/7.png"/>
+            </div>
+        </div>
+    </div>
+
+
 
 </body>
